force-app/main/default/objects/Campaign/fields/Archive_Start__c.field-meta.xml
<CustomField>
    <fullName>Archive_Start__c</fullName>
    <label>Archive Start</label>
    <type>DateTime</type>
</CustomField>