force-app/main/default/objects/Campaign/fields/Attended_Archive_Count__c.field-meta.xml
<CustomField>
    <fullName>Attended_Archive_Count__c</fullName>
    <label>Attended Archive Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>