force-app/main/default/objects/Campaign/fields/Event_Abstract__c.field-meta.xml
<CustomField>
    <fullName>Event_Abstract__c</fullName>
    <label>Event Abstract</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>