force-app/main/default/objects/Campaign/fields/Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Event_ID__c</fullName>
    <label>Event ID</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>