force-app/main/default/objects/Campaign/fields/Event_Profile__c.field-meta.xml
<CustomField>
    <fullName>Event_Profile__c</fullName>
    <label>Event Profile</label>
    <type>TextArea</type>
</CustomField>