force-app/main/default/objects/Campaign/fields/Event_Title__c.field-meta.xml
<CustomField>
    <fullName>Event_Title__c</fullName>
    <label>Event Title</label>
    <type>TextArea</type>
</CustomField>