force-app/main/default/objects/Campaign/fields/Invalidate__c.field-meta.xml
<CustomField>
    <fullName>Invalidate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Suppress old campaign records from 2015 and before Marketing team started using the Campaign object for analyzing social media trends.</description>
    <inlineHelpText>Suppress old campaign records from 2015 and before Marketing team started using the Campaign object for analyzing social media trends. Check this box if you want to discard the campaign record.</inlineHelpText>
    <label>Invalidate</label>
    <type>Checkbox</type>
</CustomField>