force-app/main/default/objects/Campaign/fields/Live_End__c.field-meta.xml
<CustomField>
    <fullName>Live_End__c</fullName>
    <label>Live End</label>
    <type>DateTime</type>
</CustomField>