force-app/main/default/objects/Campaign/fields/Live_Start__c.field-meta.xml
<CustomField>
    <fullName>Live_Start__c</fullName>
    <label>Live Start</label>
    <type>DateTime</type>
</CustomField>