force-app/main/default/objects/Campaign/fields/No_Show_Count__c.field-meta.xml
<CustomField>
    <fullName>No_Show_Count__c</fullName>
    <label>No Show Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>